# learnopengl

./: .editorconfig  CMakeLists.txt  LICENSE.md  hello_rectangle_2.cpp  main.cpp  shaders_uniforms.cpp  shaders_vao.cpp
include/glad/: glad.h
lib/glad/: glad.c
resources/shaders/: basic_lighting.fragment.glsl  basic_lighting.vertex.glsl  basic_lighting_gouraud.fragment.glsl  basic_lighting_gouraud.vertex.glsl  basic_texture.fragment.glsl  basic_texture.vertex.glsl  coordinate_systems.fragment.glsl  coordinate_systems.vertex.glsl  light_casters_directional.fragment.glsl  light_casters_point.fragment.glsl  light_casters_point.vertex.glsl  light_casters_spot.fragment.glsl  light_colors.fragment.glsl  light_colors.vertex.glsl  light_colors_bright.fragment.glsl  lighting_maps.fragment.glsl  materials.fragment.glsl  model_loading.fragment.glsl  model_loading.vertex.glsl  multicolor_rectangle.fragment.glsl  multicolor_rectangle.vertex.glsl  multiple_lights.fragment.glsl  transforms.vertex.glsl
src/: BasicLighting.cpp  BasicLightingGouraud.cpp  Camera.cpp  CoordinateSystems.cpp  HelloRectangle.cpp  HelloRectangle2.cpp  LightCastersDirectional.cpp  LightCastersPoint.cpp  LightCastersSpot.cpp  LightColors.cpp  LightingMaps.cpp  Materials.cpp  Mesh.hpp  Model.hpp  ModelLoading.cpp  MultipleLights.cpp  Shader.hpp  ShaderUniforms.cpp  ShadersVAO.cpp  Textures.cpp  Transforms.cpp
